@@ -1,4 +1,11 @@
 <literallayout>
+<emphasis role="bold">2008-03-10 Jens Persson</emphasis>
+
+    * Make it validate as HTML-4.01
+    * Added Videomixer chapter
+    * Added Mike Auty as the winner in the first competition
+    * Various other fixes
+
 <emphasis role="bold">2006-12-29  Jens Persson</emphasis>
 
     * Added Capabilities chapter
