@@ -36,7 +36,7 @@ like this:</para>
 <emphasis role="bold">Example 3.1</emphasis>
   <synopsis>#!/usr/bin/env python
 
-import sys, os, os.path
+import sys, os
 import pygtk, gtk, gobject
 import pygst
 pygst.require("0.10")
@@ -100,19 +100,24 @@ GTK_Main()
 gtk.main()
 </synopsis>
 
-  <para>This next example is playing mpeg videos. Some demuxers, such as mpegdemux, uses
-   dynamic pads which are created at runtime and therefor you can't link between the demuxer
-  and the next element in the pipeline before the pad has been created at runtime. Watch out
-  for the demuxer_callback() function below. </para>
-
-<para>THIS EXAMPLE IS NOT WORKING YET!!! You may submit a solution for it and we will announce a winner 
-that gets, at your option, a date with Richard M Stallman, Eric S Raymond or Scarlett Johansson. And before
-anyone asks, NO, you may only choose ONE of the above choices! TIA
+  <para>The next example is playing mpeg2 videos. Some demuxers, such as mpegdemux, uses
+    dynamic pads which are created at runtime and therefor you can't link between the demuxer
+    and the next element in the pipeline before the pad has been created at runtime. Watch out
+    for the demuxer_callback() method below.
   </para>
+
+  <para>THIS EXAMPLE IS NOT WORKING YET!!! You may submit a solution for it and we will announce a winner 
+    that gets, at your option, a date with Richard M Stallman, Eric S Raymond or Scarlett Johansson. And before
+    anyone asks, NO, you may only choose ONE of the above choices! TIA
+  </para>
+  <para>
+    UPDATE! The competition is over. Mike Auty fixed it with a few queues. He passed on the grand prize though
+    saying he's too busy coding so no time for dating. :D
+  </para>  
 <emphasis role="bold">Example 3.2</emphasis>
 <synopsis>#!/usr/bin/env python
 
-import sys, os, os.path
+import sys, os
 import pygtk, gtk, gobject
 import pygst
 pygst.require("0.10")
@@ -122,7 +127,7 @@ class GTK_Main:
 	
 	def __init__(self):
 		window = gtk.Window(gtk.WINDOW_TOPLEVEL)
-		window.set_title("Mpeg-Player")
+		window.set_title("Mpeg2-Player")
 		window.set_default_size(500, 400)
 		window.connect("destroy", gtk.main_quit, "WM destroy")
 		vbox = gtk.VBox()
@@ -154,11 +159,13 @@ class GTK_Main:
 		self.player.add(audiosink)
 		videosink = gst.element_factory_make("autovideosink", "video-output")
 		self.player.add(videosink)
-		self.queue = gst.element_factory_make("queue", "queue")
-		self.player.add(self.queue)
+		self.queuea = gst.element_factory_make("queue", "queuea")
+		self.queuev = gst.element_factory_make("queue", "queuev")
+		self.player.add(self.queuea)
+		self.player.add(self.queuev)
 		gst.element_link_many(source, demuxer)
-		gst.element_link_many(self.video_decoder, videosink)
-		gst.element_link_many(self.audio_decoder, audioconv, audiosink)
+		gst.element_link_many(self.queuev, self.video_decoder, videosink)
+		gst.element_link_many(self.queuea, self.audio_decoder, audioconv, audiosink)
 		bus = self.player.get_bus()
 		bus.add_signal_watch()
 		bus.enable_sync_message_emission()
@@ -198,10 +205,10 @@ class GTK_Main:
 	
 	def demuxer_callback(self, demuxer, pad):
 		if pad.get_property("template").name_template == "video_%02d":
-			dec_pad = self.video_decoder.get_pad("sink")
+			dec_pad = self.queuev.get_pad("sink")
 			pad.link(dec_pad)
 		elif pad.get_property("template").name_template == "audio_%02d":
-			dec_pad = self.audio_decoder.get_pad("sink")
+			dec_pad = self.queuea.get_pad("sink")
 			pad.link(dec_pad)
 		
 GTK_Main()
