@@ -80,18 +80,19 @@
  
 <h3 id="devel">Devel</h3>
 <div class="content">
-      Install from Subversion, eg pygst-reference (you will need docbook-xml and docbook-xsl):
-  <div class="code">svn checkout svn://svn.berlios.de/pygstdocs/trunk/pygst-reference
+  Install from Subversion, eg pygst-reference (you will need docbook-xml and docbook-xsl):
+  <div class="code">svn co svn://svn.berlios.de/pygstdocs/trunk/pygst-reference
 cd pygst-reference
 make
   </div>
+  You should now be able to read pygst-reference/index.html in your browser.
 </div>
 
 <h2 id="projects">Projects</h2>
 <h3 id="audio">Audio</h3>
 <div class="content">
+  <a href="http://exaile.org/">Exaile</a><br />
   <a href="http://fuplayer.org/">FUPlayer</a><br />
-  <a href="http://live.gnome.org/Istanbul">Istanbul</a><br />
   <a href="http://www.jokosher.org/">Jokosher</a><br />
   <a href="http://listengnome.free.fr/">Listen</a><br />
   <a href="http://www.sacredchao.net/quodlibet">Quodlibet</a>
@@ -100,6 +101,7 @@ make
 <h3 id="video">Video</h3>
 <div class="content">
   <a href="http://www.fluendo.com/elisa">Elisa</a><br />
+  <a href="http://live.gnome.org/Istanbul">Istanbul</a><br />
   <a href="http://www.pitivi.org/">PiTiVi</a><br />
   <a href="http://home.gna.org/whaawmp/">Whaaw</a>
 </div>
