@@ -1,3 +1,10 @@
+2008-03-10 Jens Persson
+
+    * Make it validate as HTML-4.01
+    * Added Videomixer chapter
+    * Added Mike Auty as the winner in the first competition
+    * Various other fixes
+
 2006-12-29  Jens Persson
 
     * Added Capabilities chapter
